--- a/Pratica004/news-homepage-main/index.html
+++ b/Pratica004/news-homepage-main/index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="shortcut icon" href="assets/images/favicon-32x32.png" type="image/x-icon">
   <title>Frontend Mentor | News homepage</title>
   <link rel="stylesheet" href="estilos/midiaquery.css">
 
