--- a/Pratica004/news-homepage-main/index.html
+++ b/Pratica004/news-homepage-main/index.html
@@ -6,7 +6,9 @@
 
   <link rel="shortcut icon" href="assets/images/favicon-32x32.png" type="image/x-icon">
   <title>Frontend Mentor | News homepage</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
   <link rel="stylesheet" href="estilos/midiaquery.css">
+  <link rel="stylesheet" href="estilos/mobile.css">
 
 </head>
 <body>
@@ -16,12 +18,17 @@
       <div class="logo">
         <h2>W.</h2>
       </div>
-      <div class="menu">
+      <div class="menu" id="menu">
           <a href="#">Home</a>
           <a href="#">New</a>
           <a href="#">Popular</a>
           <a href="#">Trending</a>
           <a href="#" class="categories">Categories</a>
+      </div>
+      <div id="menuzinho">
+        <span id="menuzinho" class="material-symbols-outlined" onclick="clickmenu()">
+        menu
+        </span>
       </div>
     </div>
   </header>
@@ -82,6 +89,14 @@
       </div>
     </div>
   </main>
-  
+  <script>
+    function clickmenu() {
+        if (menu.style.display == 'block') {
+            menu.style.display = 'none'
+        } else {
+            menu.style.display = 'block'
+        }
+    }
+</script>
 </body>
 </html>
